# hyperdrive-frontend

./: .eslintignore  .gitignore  .prettierignore  .prettierrc.mjs  BUILD.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.jsonc  index.html  manifest.json  package.json  tailwind.config.js  turbo.json  vite.config.ts  wagmi.config.ts
.changeset/: angry-ads-sniff.md  beige-apples-perform.md  beige-pets-notice.md  blue-plants-play.md  blue-schools-thank.md  breezy-keys-brake.md  bright-meals-invent.md  brown-beers-carry.md  chatty-goats-fix.md  clean-phones-trade.md  clever-avocados-breathe.md  clever-clocks-joke.md  cold-buttons-lick.md  config.json  cool-humans-knock.md  cuddly-tips-shout.md  cuddly-years-tell.md  dirty-coins-itch.md  dirty-eagles-travel.md  dull-worms-thank.md  empty-ants-grin.md  famous-terms-cry.md  fifty-mugs-reply.md  flat-hornets-nail.md  fluffy-cobras-allow.md  four-windows-poke.md  fresh-cougars-tie.md  funny-roses-breathe.md  fuzzy-schools-raise.md  gentle-llamas-glow.md  gold-hats-pump.md  great-apes-hug.md  healthy-points-rhyme.md  honest-tools-hug.md  khaki-cougars-smash.md  large-doors-happen.md  large-walls-beam.md  little-carrots-dance.md  long-cherries-move.md  long-hornets-matter.md  (+45 more)
.github/workflows/: build_wasm.yml  check_diff.yml  docker.yml  format.yml  gh-pages.yml  lint.yml  pull-request.yml  release.yml  test.yml  typecheck.yml
.parcel-cache/: 131d03e85e6cefca.txt  5da6cbc681281962  6d12805c12b99f11  be403adacce47fa6  data.mdb  lock.mdb
analytics/: .env.example  README.md  analytics_example.py  requirements.txt
apps/fixed-borrow/: .dependency-cruiser.js  index.html  package.json  polyfills.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/fixed-borrow/src/: App.tsx  main.tsx
apps/fixed-rate-borrow/: .eslintrc.js  package.json
apps/fixed-rate-borrow/src/: App.tsx  main.tsx
apps/hyperdrive-prototype-ui/: .eslintrc.js  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wagmi.config.ts
apps/hyperdrive-prototype-ui/src/: generated.ts  index.tsx
apps/hyperdrive-sdk-docs/: .eslintrc  .eslintrc.js  .gitignore  .prettierignore  docusaurus.config.js  docusaurus.config.ts  next.config.js  package.json  sidebars.js  sidebars.ts  theme.config.tsx  tsconfig.json  turbo.json  typedoc.json
apps/hyperdrive-sdk-docs/pages/: _meta.json  core.mdx  queries.mdx  sdk.mdx
apps/hyperdrive-trading/: .dependency-cruiser.js  .env.example  .env.sample  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .prettierrc.js  .prettierrc.mjs  CHANGELOG.md  LICENSE  README.md  index.html  package.json  polyfills.ts  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json  vite.config.build.ts  vite.config.ts
apps/hyperdrive-trading/scripts/: build-app.sh  generate-coingecko.sh  generate-rewards-swagger.sh  generate-swagger.sh  (+2 more)
apps/sdk-sandbox/: .env.example  client.ts  package.json  tsconfig.json  uniswap-route.json
assets/: _commonjsHelpers-1789f0cf-B2fa9O4S.js  _commonjsHelpers-1789f0cf-BA9WGh3n.js  _commonjsHelpers-1789f0cf-CwBdW1cw.js  _commonjsHelpers-1789f0cf-D__uvp4M.js  _commonjsHelpers-1789f0cf-DbhaA-k1.js  _commonjsHelpers-1789f0cf-DsWaaJxx.js  _commonjsHelpers-1789f0cf-DzA9fMoI.js  capsuleWalletImage-Deatf7ld.js  ccip-B5FaVIMm.js  ccip-B8UeGTEO.js  ccip-BGo4Z_JY.js  ccip-BhmWAzJj.js  ccip-Bl27bXll.js  ccip-BoWkxT8Q.js  ccip-fJ57fflJ.js  cpsl-alert_18.entry-18oML4VM.js  cpsl-alert_18.entry-B1S8DnCH.js  cpsl-alert_18.entry-BvWdcLPw.js  cpsl-alert_18.entry-BykElwSp.js  cpsl-alert_18.entry-C5KAzk_1.js  cpsl-alert_18.entry-CFs-1qPp.js  cpsl-alert_18.entry-xqV39h1p.js  cpsl-animation.entry-2_GOI8U7.js  cpsl-animation.entry-DSKdPfQP.js  cpsl-animation.entry-DdoMs_Ap.js  cpsl-animation.entry-EgJrROQi.js  cpsl-animation.entry-HfGVMNa5.js  cpsl-animation.entry-J5GREv41.js  cpsl-animation.entry-hpfQVyWf.js  cpsl-col.entry-6Sct8Lqs.js  cpsl-col.entry-BSVliTA8.js  cpsl-col.entry-ByWgnnwj.js  cpsl-col.entry-CIjL-sV6.js  cpsl-col.entry-CruMGb2M.js  cpsl-col.entry-D5KhGS7u.js  cpsl-col.entry-hSELGe0C.js  cpsl-grid.entry-B9Uv4sPN.js  cpsl-grid.entry-CDAnc76t.js  cpsl-grid.entry-D2HR545m.js  cpsl-grid.entry-EkrCBkHv.js  (+77 more)
crates/delv-core/: Cargo.toml
crates/delv-core/src/: conversions.rs  error.rs  lib.rs  utils.rs
crates/fixed-point-wasm/: CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json
crates/fixed-point-wasm/scripts/: build.ts  types.ts
crates/fixed-point-wasm/src/: formatting.rs  lib.rs  utils.rs
crates/hyperdrive-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json
crates/hyperdrive-wasm/scripts/: build.sh  build.ts  build2.ts  types.ts
crates/hyperdrive-wasm/src/: error.rs  lib.rs  lp.rs  types.rs  utils.rs
crates/hyperdrive-wasm/src/long/: close.rs  fees.rs  max.rs  open.rs
crates/hyperdrive-wasm/src/short/: close.rs  fees.rs  max.rs  open.rs
crates/ts-macro/: Cargo.toml
crates/ts-macro/src/: lib.rs
crates/ts-type/: Cargo.toml
crates/typescript-macro/: Cargo.toml
docs/: CodingStyle.md  PostMortems.md
queries/: asdf.ts
scripts/: preinstall.sh  release.sh
src/: generated.ts  globals.css  index.tsx
src/components/: App.tsx  LongPositionForm.tsx  MarketActionsButtonGroup.tsx  MarketsTable.tsx  Navbar.tsx  Receipt.tsx  StatBubble.tsx  TermTable.tsx  TokenInput.tsx
src/hyperdrive/: config.ts  types.ts  useHyperdriveConfig.ts
src/pages/: Index.tsx  IndexPage.tsx  MarketPage.tsx  term.tsx
src/utils/: index.ts
src/wallet/: wagmiClient.ts
(+1123 files in other folders)
