[package]
name = "delv-core"
version = "0.1.0"
edition = "2021"

[features]
conversions = []
error = []
default = ["conversions", "error"]

[dependencies]
# external
ethers = { version = "2.0.14", default-features = false }
js-sys = "0.3.69"
thiserror = "1.0"
wasm-bindgen = "0.2.92"

# internal
fixedpointmath = "0.17.1"
