[package]
name = "fixed-point-wasm"
# This version will be overwritten by the build script to match the version in
# the crate's package.json which is managed by changesets.
version = "0.0.5"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# external
console_error_panic_hook = { version = "0.1.7", optional = true }
ethers = { version = "2.0.14", default-features = false }
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

# internal
fixedpointmath = "0.17.1"

# workspace
ts-macro = { path = "../ts-macro" }
delv-core = { path = "../delv-core" }
