[package]
name = "hyperdrive-wasm"
# This version will be overwritten by the build script to match the version in
# the crate's package.json which is managed by changesets.
version = "0.15.0"
edition = "2021"
authors = ["Ryan Goree <ryan@delv.tech>", "Danny Delott <dannyd@delv.tech>"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

# external
ethers = { version = "2.0", features = ["abigen", "ws"] }
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
js-sys = "0.3.64"
wasm-bindgen = { version = "0.2.86" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

# internal
fixedpointmath = "0.16.8"
hyperdrive-math = "0.16.8"
hyperdrive-wrappers = "0.16.8"

# workspace
ts-macro = { path = "../ts-macro" }
delv-core = { path = "../delv-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
