[package]
name = "hyperdrive-wasm"
# This version will be overwritten by the build script to match the version in
# the crate's package.json which is managed by changesets.
version = "0.15.0"
edition = "2021"
authors = ["Ryan Goree <ryan@delv.tech>", "Danny Delott <dannyd@delv.tech>"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# external
console_error_panic_hook = { version = "0.1.7", optional = true }
const-hex = "1.12.0"
ethers = "2.0.14"
js-sys = "0.3.64"
wasm-bindgen = "0.2.86"

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

# internal
fixedpointmath = "0.16.8"
hyperdrive-math = "0.16.8"
hyperdrive-wrappers = "0.16.8"

# workspace
delv-core = { path = "../delv-core" }
ts-macro = { path = "../ts-macro" }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
