[package]
name = "hyperdrive-wasm"
# This version will be overwritten by the build script to match the version in
# the crate's package.json which is managed by changesets.
version = "0.15.3"
edition = "2021"
authors = [
  "Ryan Goree <ryan@delv.tech>",
  "Danny Delott <dannyd@delv.tech>",
  "Matt Brown <matt@delv.tech>",
]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# external
console_error_panic_hook = { version = "0.1.7", optional = true }
const-hex = "1.12.0"
ethers = { version = "2.0.14", default-features = false }
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

# internal
fixedpointmath = { git = "https://github.com/delvtech/hyperdrive-rs.git", branch = "dpaiton/remove-checkpoint-exposure" }
hyperdrive-math = { git = "https://github.com/delvtech/hyperdrive-rs.git", branch = "dpaiton/remove-checkpoint-exposure" }
hyperdrive-wrappers = { git = "https://github.com/delvtech/hyperdrive-rs.git", branch = "dpaiton/remove-checkpoint-exposure" }

# workspace
delv-core = { path = "../delv-core" }
ts-macro = { path = "../ts-macro" }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
